--- a/Gallary/templates/home.html
+++ b/Gallary/templates/home.html
@@ -8,6 +8,7 @@
     <h1>这是主页</h1>
     {% for text_obj in text_objs.all %}
     {{ text_obj.text }}
+        <img src="{{ text_obj.image.url }}" alt="fail">
     {% endfor %}
 </body>
 </html>
