--- a/Gallary/templates/home.html
+++ b/Gallary/templates/home.html
@@ -76,7 +76,7 @@
   <section class="jumbotron text-center">
     <div class="container">
       <h1 class="jumbotron-heading">画廊</h1>
-      <p class="lead text-muted">这个兴趣使然的小玩具</p>
+      <p class="lead text-muted">一个兴趣使然的小玩具</p>
       <p>
         <a href="#" class="btn btn-primary my-2">Main call to action</a>
         <a href="#" class="btn btn-secondary my-2">Secondary action</a>
