添加了博客的单独界面
通过路由分配和隐藏主键id来显示单独的博客页面

--- a/Gallary/templates/home.html
+++ b/Gallary/templates/home.html
@@ -78,8 +78,8 @@
       <h1 class="jumbotron-heading">画廊</h1>
       <p class="lead text-muted">一个兴趣使然的小玩具</p>
       <p>
-        <a href="#" class="btn btn-primary my-2">Main call to action</a>
-        <a href="#" class="btn btn-secondary my-2">Secondary action</a>
+        <a href="blog" class="btn btn-primary my-2">博客</a>
+        <a href="#" class="btn btn-secondary my-2">未定</a>
       </p>
     </div>
   </section>
@@ -107,7 +107,7 @@
 <footer class="text-muted">
   <div class="container">
     <p class="float-right">
-      <a href="#">Back to top</a>
+      <a href="#">返回顶部</a>
     </p>
     <p>Album example is &copy; Bootstrap, but please download and customize it for yourself!</p>
     <p>New to Bootstrap? <a href="https://getbootstrap.com/">Visit the homepage</a> or read our <a href="/docs/4.3/getting-started/introduction/">getting started guide</a>.</p>
