--- a/Gallary/templates/home.html
+++ b/Gallary/templates/home.html
@@ -6,6 +6,8 @@
 
 
 <!doctype html>
+
+{% load static %}
 <html lang="en">
   <head>
     <meta charset="utf-8">
@@ -78,8 +80,8 @@
       <h1 class="jumbotron-heading">画廊</h1>
       <p class="lead text-muted">一个兴趣使然的小玩具</p>
       <p>
-        <a href="blog" class="btn btn-primary my-2">博客</a>
-        <a href="#" class="btn btn-secondary my-2">未定</a>
+        <a href="blog" class="btn btn-primary my-2">我的博客</a>
+        <a href="{% static "huaji.jpg" %}" class="btn btn-secondary my-2">我的自拍</a>
       </p>
     </div>
   </section>
